# example_scope

./: CMakeLists.txt  NOTICE  README.md
docs/: example_benchmark_class.md  sugar.cmake
src/: sugar.cmake
src/example/: init.cpp  sugar.cmake  version.cpp  version.hpp.in
